--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,17 @@ body {
   align-items: center;
   flex-direction: column;
   color: whitesmoke;
+  position: relative;
 }
 
 .svg-container {
   border: 2px solid navajowhite;
+}
+
+#tooltip {
+  border: 2px solid pink;
+  width: 300px;
+  height: 300px;
+  background: steelblue;
+  position: absolute;
 }
